...
                    AnimatedVisibility(
                        visible = true,
                        enter = fadeIn(animationSpec = tween(800, delayMillis = 800))
                    ) {
                        Column(horizontalAlignment = Alignment.CenterHorizontally) {
                            Text(
                                text = "Welcome Back",
                                fontSize = 28.sp,
                                fontWeight = FontWeight.Medium,
                                color = Color.White,
                                textAlign = TextAlign.Center
                            )
                            
...
                        Column {
                            OutlinedTextField(
                                value = formState.email,
                                onValueChange = { handleInputChange("email", it) },
                                label = { 
                                    Text(
                                        "Email", 
                                        color = Color.White.copy(alpha = 0.9f)
                                    ) 
                                },
                                placeholder = { 
                                    Text(
                                        "Enter your email", 
...
                        Column {
                            OutlinedTextField(
                                value = formState.password,
                                onValueChange = { handleInputChange("password", it) },
                                label = { 
                                    Text(
                                        "Password", 
                                        color = Color.White.copy(alpha = 0.9f)
                                    ) 
                                },
                                placeholder = { 
                                    Text(
                                        "Enter your password", 
...
